2011-05-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[qcons int] Avoid using literal symbols with ‘#\#’ in the name.

	These cause round-trip problems that vary from
	one Guile implementation to the next.

	* postgres-qcons.scm (*infix-operations*):
	Use ‘string->symbol’ for symbols named "#", "##", "?#".

2011-05-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Spiff docstrings; use ‘-args:’ instead of ‘-sig:’.

	* libpq.c: Throughout, as described above.
	* postgres-col-defs.scm: Likewise.
	* postgres-gxrepl.scm: Likewise.
	* postgres-meta.scm: Likewise.
	* postgres-qcons.scm: Likewise.
	* postgres-resdisp.scm: Likewise.
	* postgres-table.scm: Likewise.
	* postgres-types.scm: Likewise.

2011-05-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc int] Use ‘doc:’+comment for ‘PRIMPROC’ docstrings.

	* libpq.c: Throughout, convert series-of-strings
	style docstrings to ‘doc:’+comment style docstrings.

2011-05-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstractions for all gh_ elements.

	* gi.h (BOOLEANP, EXACTP, NULLP, PAIRP, STRINGP, SYMBOLP)
	(PROCEDUREP, BOOLEAN, NUM_INT, NUM_ULONG, SYMBOL, STRING, BSTRING)
	(CHARACTER, C_INT, VECTOR_LEN, EQ, CONS, CAR, CDR, SETCAR, SETCDR)
	(EVAL_STRING, APPLY, LISTIFY): New #define:s.
	(MEMQ): New macro.
	(ROZT_X): Use ‘BSTRING’.
	(PCHAIN): Use ‘LISTIFY’.
	* libpq.c: Use new abstractions, throughout.

2011-05-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstractions: PRIMPROC, STONED, MOD_INIT_LINK_THUNK

	* gi.h (PRIMPROC, STONED, MOD_INIT_LINK_THUNK): New #define:s.
	* libpq.c: Use them, throughout.

2011-05-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build maint] Don't bundle modsup.h; copy 3 macros from it, instead.

	* gi.h [!HAVE_GUILE_MODSUP_H] (GH_DEFPROC): New macro.
	[!HAVE_GUILE_MODSUP_H] (GH_MODULE_LINK_FUNC, GH_STONED): Likewise.
	* modsup.h.snap: Delete file.
	* Makefile.am (EXTRA_DIST): Delete var.

2011-05-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Move guile abstractions from libpq.c to gi.h.
